--- a/Practica_B3/Practice_B3.html
+++ b/Practica_B3/Practice_B3.html
@@ -48,23 +48,23 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="btn btn-light nav-link dropdown-toggle text-dark mr-2 border-danger" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img src="/Practica_B3/img/logos/España.png" style="height: 20px" alt="España">
+                  <img src="img/logos/España.png" style="height: 20px" alt="España">
                   ES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <h6 class="dropdown-header">Ediciones</h6>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item text-dark" href="#">
-                    <img src="/Practica_B3/img/logos/world.jpeg" style="height: 20px;" alt="Mundo">
+                    <img src="img/logos/world.jpeg" style="height: 20px;" alt="Mundo">
                     EN (English)
                   </a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item text-dark" href="#">
-                    <img src="/Practica_B3/img/logos/mexico.jpeg" style="height: 20px;" alt="México">
+                    <img src="img/logos/mexico.jpeg" style="height: 20px;" alt="México">
                     MX (México)</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item text-dark" href="#">
-                    <img src="/Practica_B3/img/logos/USA.jpeg" style="height: 20px;" alt="USA">
+                    <img src="img/logos/USA.jpeg" style="height: 20px;" alt="USA">
                     US (USA)</a>
               </div>
             </li>
@@ -283,7 +283,7 @@
   <div class="container mb-5" style="height: 150px; max-width: 600px;">
     <div class="row">
       <div class="col-12">
-        <a href="#"> <img src="../imagenes/lol.gif" alt="Anuncio" class="img-fluid"></a>
+        <a href="#"> <img src="img/lol.gif" alt="Anuncio" class="img-fluid"></a>
       </div>
     </div>
   </div>
@@ -294,7 +294,7 @@
       <!--Noticia principal (La mas grande)-->
       <div class="col-md-7 col-12 mx-auto">
         <div class="card mb-3">
-          <a href="#"><img src="/Practica_B3/img/Noticias/noticia 1.webp" class="card-img-top" alt="Noticia principal"></a>
+          <a href="#"><img src="img/Noticias/noticia 1.webp" class="card-img-top" alt="Noticia principal"></a>
           <div class="card-body">
             <h2 class="card-title"><a href="#" class="text-dark">Brasil se hunde en Asunción y todo se ve complicado</a></h2>
             <p class="card-text"><small class="text-muted">Juan Oseguera</small></p>
@@ -308,7 +308,7 @@
           <div class="card mb-3" style="max-width: 440px;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <a href="#"><img src="/Practica_B3/img/Noticias/noticia 2.webp" class="img-fluid p-3 p-2" alt="Noticia 2"></a>
+                <a href="#"><img src="img/Noticias/noticia 2.webp" class="img-fluid p-3 p-2" alt="Noticia 2"></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -323,7 +323,7 @@
           <div class="card mb-3" style="max-width: 440px;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <a href=""><img src="/Practica_B3/img/Noticias/noticia 3.webp" class="img-fluid pr-3 p-2" alt="Noticia 3"></a>
+                <a href=""><img src="img/Noticias/noticia 3.webp" class="img-fluid pr-3 p-2" alt="Noticia 3"></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -338,7 +338,7 @@
           <div class="card mb-3" style="max-width: 420px;">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <a href=""><img src="/Practica_B3/img/Noticias/noticia 4.webp" class="img-fluid pr-3 p-2" alt="Noticia 4"></a>
+                <a href=""><img src="img/Noticias/noticia 4.webp" class="img-fluid pr-3 p-2" alt="Noticia 4"></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -359,7 +359,7 @@
       <div class="col-12">
         <div class="card-deck">
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 5.jpg" class="card-img-top" alt="Noticia 5"></a>
+            <a href="#"><img src="img/Noticias/noticia 5.jpg" class="card-img-top" alt="Noticia 5"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">Se registra lesión fuerte dentro de la cancha</a></h5>
               <p class="card-text">En un partido de futbol se registró una lesión muy fuerte</p>
@@ -368,7 +368,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 6.webp" class="card-img-top" alt="Noticia 6"></a>
+            <a href="#"><img src="img/Noticias/noticia 6.webp" class="card-img-top" alt="Noticia 6"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">Portero saluda a su familia desde la cancha</a></h5>
               <p class="card-text">La familia del arquero estuvo presente para darle animo y el los saludó</p>
@@ -377,7 +377,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 4.webp" class="card-img-top" alt="Noticia 4"></a>
+            <a href="#"><img src="img/Noticias/noticia 4.webp" class="card-img-top" alt="Noticia 4"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">Directores y selección molestos ante sus resultados en la liga</a></h5>
               <p class="card-text">Todos en la liga estan molestos por sus resultados</p>
@@ -419,7 +419,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <a href="#"><img src="/Practica_B3/img/Noticias/noticia 6.webp" class="img-fluid pr-3 p-2" alt="Noticia 6"></a>
+              <a href="#"><img src="img/Noticias/noticia 6.webp" class="img-fluid pr-3 p-2" alt="Noticia 6"></a>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -436,7 +436,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <a href="#"><img src="/Practica_B3/img/Noticias/noticia 5.jpg" class="img-fluid pr-3 p-2" alt="Noticia 5"></a>
+              <a href="#"><img src="img/Noticias/noticia 5.jpg" class="img-fluid pr-3 p-2" alt="Noticia 5"></a>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -453,7 +453,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <a href="#"><img src="/Practica_B3/img/Noticias/noticia 4.webp" class="img-fluid pr-3 p-2" alt="Noticia 4"></a>
+              <a href="#"><img src="img/Noticias/noticia 4.webp" class="img-fluid pr-3 p-2" alt="Noticia 4"></a>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -473,7 +473,7 @@
       <div class="col-12">
         <div class="card-deck">
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 3.webp" class="card-img-top" alt="Noticia 3"></a>
+            <a href="#"><img src="img/Noticias/noticia 3.webp" class="card-img-top" alt="Noticia 3"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">Director tecnico critica fuertemente a la selección</a></h5>
               <p class="card-text">Un director tecnico desconocido a criticado el rendimiento de la selección mexicana</p>
@@ -482,7 +482,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 2.webp" class="card-img-top" alt="Noticia 2"></a>
+            <a href="#"><img src="img/Noticias/noticia 2.webp" class="card-img-top" alt="Noticia 2"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">situación alarmante para la selección mexicana</a></h5>
               <p class="card-text">La selección mexicana está en aprietos tras sus resultados en la liga</p>
@@ -491,7 +491,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="#"><img src="/Practica_B3/img/Noticias/noticia 1.webp" class="card-img-top" alt="Noticia 1"></a>
+            <a href="#"><img src="img/Noticias/noticia 1.webp" class="card-img-top" alt="Noticia 1"></a>
             <div class="card-body">
               <h5 class="card-title"><a href="#" class="text-dark">Brasil es derrotada en Asunción y todo se complica</a></h5>
               <p class="card-text">Tras la derrota de Brasil en Asunción todo empieza a ponerse dificil</p>
@@ -572,13 +572,13 @@
             <p class="mb-1">Síguenos en:</p>
             <div class="d-inline-block">
                 <a href="#" class="mx-2 text-dark" aria-label="Facebook">
-                    <img src="/Practica_B3/img/logos/Facebook.png" style="max-height: 30px;" alt="Facebook">
+                    <img src="img/logos/Facebook.png" style="max-height: 30px;" alt="Facebook">
                 </a>
                 <a href="#" class="mx-2 text-dark" aria-label="X">
-                    <img src="/Practica_B3/img/logos/X.jpeg" style="max-height: 30px;" alt="ecs">
+                    <img src="img/logos/X.jpeg" style="max-height: 30px;" alt="ecs">
                 </a>
                 <a href="#" class="mx-2 text-dark" aria-label="Instagram">
-                    <img src="/Practica_B3/img/logos/Instagram.png" style="max-height: 30px;" alt="Instagram">
+                    <img src="img/logos/Instagram.png" style="max-height: 30px;" alt="Instagram">
                 </a>
                 <a href="#" class="mx-2 text-dark" aria-label="LinkedIn"></a>
             </div>
