--- a/Practica_B3/Practice_B3.html
+++ b/Practica_B3/Practice_B3.html
@@ -28,11 +28,11 @@
                 <a class="nav-link text-dark text-small" href="#"><strong>La portada de hoy</strong><span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active d-flex align-items-center">
-                <img src="/Practica_B3/img/logos/RadioMarca.png" class="" style="height: 40px;">
+                <img src=img/logos/RadioMarca.png" class="" style="height: 40px;">
                 <a class="nav-link text-dark text text-small" href="#"><strong>Radio Marca</strong><span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active d-flex align-items-center">
-                <img src="/Practica_B3/img/logos/LaLiga.png" class="" style="height: 40px; border-radius: 50%;">
+                <img src="img/logos/LaLiga.png" class="" style="height: 40px; border-radius: 50%;">
                 <a class="nav-link text-dark text-small" href="#"><strong>La liga Marca</strong><span class="sr-only">(current)</span></a>
             </li>
         </ul>
